Changes pertaining to book api
